@@ -93,13 +93,13 @@ X-0-is-multipart: 1
 X-0-is-coverletter: 1
 X-0-is-rfc822: 0
 X-0-decode-filename: TESTSUITE/spool/scan/10HmbC-0005vi-00/10HmbC-0005vi-00-00000
-X-0-content-size: 1
+X-0-content-size: 2
 X-1-content-type: text/plain
 X-1-filename: 
-X-1-charset: us-ascii
+X-1-charset: US-ASCII
 X-1-boundary: 
 X-1-content-disposition: inline
-X-1-content-transfer-encoding: 
+X-1-content-transfer-encoding: quoted-printable
 X-1-content-id: 
 X-1-content-description: 
 X-1-is-multipart: 0
@@ -107,11 +107,12 @@ X-1-is-coverletter: 1
 X-1-is-rfc822: 0
 X-1-decode-filename: TESTSUITE/spool/scan/10HmbC-0005vi-00/10HmbC-0005vi-00-00001
 X-1-content-size: 1
+X-mime-regex: matched
 X-2-content-type: text/plain
-X-2-filename: working-patch
+X-2-filename: 
 X-2-charset: us-ascii
 X-2-boundary: 
-X-2-content-disposition: attachment
+X-2-content-disposition: inline
 X-2-content-transfer-encoding: 
 X-2-content-id: 
 X-2-content-description: 
@@ -121,11 +122,11 @@ X-2-is-rfc822: 0
 X-2-decode-filename: TESTSUITE/spool/scan/10HmbC-0005vi-00/10HmbC-0005vi-00-00002
 X-2-content-size: 1
 X-3-content-type: text/plain
-X-3-filename: 
+X-3-filename: working-patch
 X-3-charset: us-ascii
 X-3-boundary: 
-X-3-content-disposition: inline
-X-3-content-transfer-encoding: 7bit
+X-3-content-disposition: attachment
+X-3-content-transfer-encoding: 
 X-3-content-id: 
 X-3-content-description: 
 X-3-is-multipart: 0
@@ -133,7 +134,30 @@ X-3-is-coverletter: 0
 X-3-is-rfc822: 0
 X-3-decode-filename: TESTSUITE/spool/scan/10HmbC-0005vi-00/10HmbC-0005vi-00-00003
 X-3-content-size: 1
+X-4-content-type: text/plain
+X-4-filename: 
+X-4-charset: us-ascii
+X-4-boundary: 
+X-4-content-disposition: inline
+X-4-content-transfer-encoding: 7bit
+X-4-content-id: 
+X-4-content-description: 
+X-4-is-multipart: 0
+X-4-is-coverletter: 0
+X-4-is-rfc822: 0
+X-4-decode-filename: TESTSUITE/spool/scan/10HmbC-0005vi-00/10HmbC-0005vi-00-00004
+X-4-content-size: 1
 X-Router-SSint: was preserved
+
+--T4sUOijqQbZv57TR
+Content-Type: text/plain; charset=US-ASCII
+Content-Transfer-Encoding: quoted-printable
+Content-Disposition: inline
+
+Test quoted-printable =3D    
+Space at end of line=40
+Continued line =    
+with this text.
 
 --T4sUOijqQbZv57TR
 Content-Type: text/plain; charset=us-ascii
